<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:elevation="10dp"
            android:background="@color/green_med">

            <ImageView
                android:id="@+id/ic_cultivo"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_lechuga"
                android:layout_marginHorizontal="20dp"
                android:contentDescription="@string/cultivo"/>

            <TextView
                android:id="@+id/titulo_cult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cultivo"
                android:textColor="@color/white"
                android:layout_toEndOf="@+id/ic_cultivo"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/titulo_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_centro"
                android:layout_below="@+id/titulo_cult"
                android:layout_toEndOf="@+id/ic_cultivo"
                android:textColor="@color/white"
                android:layout_marginTop="3dp"/>

            <TextView
                android:id="@+id/titulo_est"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/est_otono"
                android:layout_below="@id/titulo_reg"
                android:layout_toEndOf="@id/ic_cultivo"
                android:layout_marginTop="3dp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/titulo_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rango_temp_2"
                android:textColor="@color/white"
                android:layout_below="@id/titulo_est"
                android:layout_toEndOf="@id/ic_cultivo"
                android:layout_marginTop="3dp"/>

        </RelativeLayout>



    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>